@@ -34,7 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
-* 
+* [mjr] Fix issue with map not showing when user does not have Horde_Perms::EDIT on the gallery (Bug #10762).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1265,7 +1265,7 @@
    <date>2011-11-02</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
-* 
+* [mjr] Fix issue with map not showing when user does not have Horde_Perms::EDIT on the gallery (Bug #10762).
    </notes>
   </release>
  </changelog>
