@@ -2,6 +2,8 @@
 v2.0.1-git
 ----------
 
+[mjr] Fix issue with map not showing when user does not have Horde_Perms::EDIT
+      on the gallery (Bug #10762).
 
 
 ----
